--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "https://github.com/robertcasanova",
   "name": "bootstrap",
-  "version": "0.13.3",
+  "version": "0.13.7-mondotop",
   "homepage": "https://github.com/robertcasanova/bootstrap",
   "dependencies": {},
   "devDependencies": {
